--- a/404.html
+++ b/404.html
@@ -6,8 +6,7 @@
     <title>FlamePlus - Veri nice Exploit</title>
     <link rel="shortcut icon" type="image/jpg" href=media/favicon.png>
     <meta name="description" content="Flame+ is a Veri nice Exploit that lets you use scripts WITHOUT going through a Key System. Join our discord server pls!"/>
-    <link href="style.css" rel="stylesheet" type="text/css" />
-    <link href="style2.css" rel="stylesheet" type="text/css"/>
+    <link href="etc/style2.css" rel="stylesheet" type="text/css"/>
   </head>
    <body>
       <div class="utility-page-wrap">
