--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
   <body style="background-color:rgb(36, 36, 36);">
     <script src="script.js"></script>
     <a class="center">
-      <img src="media/download.png" class="centerimg">
-    </a>
-
-    <a class="center2">
-      <img src="media/download.png" class="centerimg2">
-    </a>
+      <form action="https://discord.gg/UyXRU3b">
+      <input type="image" src="media/download.png" class="centerimg">
+      </form>
+      </a>
   </body>
 </html>
