--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="script.js"></script>
     <a class="center">
       <form action="https://discord.gg/UyXRU3b">
-      <input type="image" src="media/download.png" class="centerimg" style="border:none;" style="outline:none;">
+      <input type="image" src="media/download.png" class="centerimg" style="outline: none;" style="border: none;">
       </form>
       </a>
   </body>
