--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <title>FlamePlus - Veri nice Exploit</title>
     <link rel="shortcut icon" type="image/jpg" href=media/favicon.png>
-    <meta name="description" content="Flame+ is a Veri nice Exploit that lets you use scripts WITHOUT going through a Key System. Join our discord server pls!"/>
+    <meta name="description" content="Download Flame+ and join the Discord server!"/>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body style="background-color:rgb(36, 36, 36);">
