--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>FlamePlus - Veri nice Exploit</title>
+    <title>FlamePlus | Download Flame+</title>
     <link rel="shortcut icon" type="image/jpg" href=media/favicon.png>
     <meta name="description" content="Download Flame+ and join the Discord server!"/>
     <link href="style.css" rel="stylesheet" type="text/css" />
