--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>FlamePlus - Veri nice Exploit</title>
+    <title>FlamePlus | Not found</title>
     <link rel="shortcut icon" type="image/jpg" href=media/favicon.png>
     <meta name="description" content="Flame+ is a Veri nice Exploit that lets you use scripts WITHOUT going through a Key System. Join our discord server pls!"/>
     <link href="etc/style.css" rel="stylesheet" type="text/css"/>
