--- a/404.html
+++ b/404.html
@@ -11,7 +11,10 @@
    <body>
       <div class="utility-page-wrap">
          <div class="utility-page-content w-form">
-            <h2 class="heading">Lost your way?</h2>
+            <h2 class="heading">Page not found</h2>
+           <br>
+           <br>
+           <img src="https://media.discordapp.net/attachments/489338893850771476/793217519564619786/error.gif" width=250/>
          </div>
       </div>
       <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5fd6058c916536c6187e9a78" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script><script
