--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
    <body>
       <div class="utility-page-wrap">
          <div class="utility-page-content w-form">
-            <h2 class="heading">Page not found</h2>
+            <h2 class="heading">Page not found?!?!?!?!?</h2>
            <br>
            <br>
            <img src="https://media.discordapp.net/attachments/489338893850771476/793217519564619786/error.gif" width=250/>
